2008-02-27  Marcus Brinkmann  <marcus@g10code.de>

	* src/kleowrap.c: Include errno.h.
	(run_kbuildsycoca): New function by Frank Osterfeld.
	(main): Invoke it.

	* src/inst-kleopatra.nsi, src/uninst-kleopatra.nsi: Move plugins
	to INSTDIR.
	* src/inst-kdelibs.nsi, src/uninst-kdelibs.nsi: Likewise.

2008-02-26  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-kleopatra.nsi, src/uninst-kleopatra.nsi: Fix last change.

	* packages/packages.current: Update gpgol, kdelibs, kleopatra.
	* src/inst-kdelibs.nsi, src/uninst-kdelibs.nsi,
	src/inst-kleopatra.nsi, src/uninst-kleopatra.nsi: Update.

	* patches/winpt/01-gpg-path.patch: New file.
	* Makefile.am (EXTRA_DIST): Add this file.

2008-02-19  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpgex.

	* src/kleowrap.c: Change working directory.

	* src/kleowrap.c: New file.
	* src/kleopatra.bat: Removed.
	* src/Makefile.am (EXTRA_DIST): Remove kleopatra.bat, add
	kleowrap.c.
	(CLEANFILES): Add kleowrap.exe.
	(gpg4win-$(VERSION).exe, gpg4win-light-$(VERSION).exe,
	(gpg4win-$(VERSION).wix, gpg4win-light-$(VERSION).wix): Add
	kleowrap.exe as dependency.
	(gpgwrap.exe): Use make magic.
	(kleowrap.exe): New target.
	* src/inst-kleopatra.nsi: Install kleowrap.exe as kleopatra.exe,
	and do not install kleopatra.bat.
	* src/uninst-kleopatra.nsi: Uninstall kleopatra.exe instead of
	kleopatra.bat.
	* src/inst-sections.nsi (no_desktop): Replace kleopatra.bat by
	kleopatra.exe.

2008-02-18  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kdelibs and kleopatra.

2008-02-18  Werner Koch  <wk@g10code.com>

	* src/installer.nsi: Take the README file from share/gpg4win.
	This is required because we now make sure that the last output
	directory is now the top directory.

	* packages/packages.current: Update GpgOL.

2008-02-16  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Undo update of kdelibs and kleopatra.
